`java version = 16` -> `java version = 8`